--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -90,36 +90,36 @@ IF(NOT QT_LRELEASE_EXECUTABLE)
     MESSAGE(FATAL_ERROR "Qt4 lrelease not found. Make sure that it has been built and installed by the Qt4 package.")
 ENDIF(NOT QT_LRELEASE_EXECUTABLE)
 
-#MACRO(ADD_TRANSLATION_FILES _sources)
-#    FOREACH(_current_FILE ${ARGN})
-#        GET_FILENAME_COMPONENT(_in ${_current_FILE} ABSOLUTE)
-#        GET_FILENAME_COMPONENT(_basename ${_current_FILE} NAME_WE)
-#
-#        SET(_out ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.qm)#
-#
-#        ADD_CUSTOM_COMMAND(
-#            OUTPUT ${_out}
-#            COMMAND ${QT_LRELEASE_EXECUTABLE}
-#            ARGS -verbose ${_in} -qm ${_out}
-#            DEPENDS ${_in}
-#        )
-#
-#        SET(${_sources} ${${_sources}} ${_out})
-#   ENDFOREACH(_current_FILE)
-#ENDMACRO(ADD_TRANSLATION_FILES)
+MACRO(ADD_TRANSLATION_FILES _sources)
+    FOREACH(_current_FILE ${ARGN})
+        GET_FILENAME_COMPONENT(_in ${_current_FILE} ABSOLUTE)
+        GET_FILENAME_COMPONENT(_basename ${_current_FILE} NAME_WE)
+
+        SET(_out ${CMAKE_CURRENT_BINARY_DIR}/${_basename}.qm)#
+
+        ADD_CUSTOM_COMMAND(
+            OUTPUT ${_out}
+            COMMAND ${QT_LRELEASE_EXECUTABLE}
+            ARGS -verbose ${_in} -qm ${_out}
+            DEPENDS ${_in}
+        )
+
+        SET(${_sources} ${${_sources}} ${_out})
+   ENDFOREACH(_current_FILE)
+ENDMACRO(ADD_TRANSLATION_FILES)
 
 
-#FILE(GLOB TS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/translations/qtemu_*.ts)
+FILE(GLOB TS_FILES ${CMAKE_CURRENT_SOURCE_DIR}/translations/shaman_*.ts)
 
-#ADD_TRANSLATION_FILES(QM_FILES ${TS_FILES})
+ADD_TRANSLATION_FILES(QM_FILES ${TS_FILES})
 
 # creating a custom target is needed to make the files build
 # "ALL" means that it will be run by default
-#ADD_CUSTOM_TARGET(translations ALL
-#                   DEPENDS ${QM_FILES})
+ADD_CUSTOM_TARGET(translations ALL
+                   DEPENDS ${QM_FILES})
 
-#INSTALL (FILES ${QM_FILES}
-#         DESTINATION share/qtemu/translations)
+INSTALL (FILES ${QM_FILES}
+         DESTINATION share/shaman/translations)
 # translation end
 
 SET(QT_USE_QTXML)
@@ -155,19 +155,19 @@ TARGET_LINK_LIBRARIES(shaman
 )
 
 #FILE(GLOB helpfiles "${CMAKE_CURRENT_SOURCE_DIR}/help/*.png")
-#INSTALL(FILES ${helpfiles} DESTINATION share/qtemu/help)
+#INSTALL(FILES ${helpfiles} DESTINATION share/shaman/help)
 
-#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/help/main.htm DESTINATION share/qtemu/help)
+#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/help/main.htm DESTINATION share/shaman/help)
 
 #FILE(GLOB helpfiles_de "${CMAKE_CURRENT_SOURCE_DIR}/help/de/*.png")
-#INSTALL(FILES ${helpfiles_de} DESTINATION share/qtemu/help/de)
+#INSTALL(FILES ${helpfiles_de} DESTINATION share/shaman/help/de)
 
-#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/help/de/main.htm DESTINATION share/qtemu/help/de)
+#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/help/de/main.htm DESTINATION share/shaman/help/de)
 
 INSTALL(TARGETS shaman DESTINATION bin)
 
 #IF(UNIX)
-#    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/misc/qtemu.desktop DESTINATION share/applications)
-#    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/crystal/qtemu.png DESTINATION share/icons/hicolor/32x32/apps)
+#    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/misc/shaman.desktop DESTINATION share/applications)
+#    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/images/crystal/shaman.png DESTINATION share/icons/hicolor/32x32/apps)
 #ENDIF(UNIX)
  
