--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -149,6 +149,12 @@ TARGET_LINK_LIBRARIES(shaman
     -larchive
 )
 
+CONFIGURE_FILE(
+       "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules/cmake_uninstall.cmake.in"
+       "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+       IMMEDIATE @ONLY)
+ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
+
 #FILE(GLOB helpfiles "${CMAKE_CURRENT_SOURCE_DIR}/help/*.png")
 #INSTALL(FILES ${helpfiles} DESTINATION share/shaman/help)
 
