--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -6,7 +6,7 @@ include(FindQt4)
 
 set(shaman_adaptor_SRCS)
 
-qt4_add_dbus_adaptor(shaman_adaptor_SRCS org.archlinux.shaman.xml src/MainWindow.h MainWindow)
+qt4_add_dbus_adaptor(shaman_adaptor_SRCS dbus/org.archlinux.shaman.xml src/MainWindow.h MainWindow)
 
 MACRO (MACRO_OPTIONAL_FIND_PACKAGE _name )
    OPTION(WITH_${_name} "Search for ${_name} package" ON)
