Hahaha I'm fixing includes to make out of source builds working :P

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -1,4 +1,5 @@
 PROJECT(shaman)
+
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
 
@@ -139,6 +140,7 @@ QT4_AUTOMOC(${shaman_SRCS})
 
 INCLUDE_DIRECTORIES(
     ${QT_INCLUDES}
+    ${CMAKE_SOURCE_DIR}
     ${CMAKE_BINARY_DIR}
 )
 
