--- a/trunk/plasma/engine/CMakeLists.txt
+++ b/trunk/plasma/engine/CMakeLists.txt
@@ -12,5 +12,5 @@ message(STATUS ""  ${PLASMA_INCLUDE_DIR})
 kde4_add_plugin(plasma_engine_shaman ${shaman_engine_SRCS})
 target_link_libraries(plasma_engine_shaman ${KDE4_KDECORE_LIBS} ${PLASMA_LIBS})
 
-install(TARGETS plasma_engine_shaman DESTINATION ${PLASMA_INCLUDE_DIR}/../lib/kde4)
-install(FILES plasma-engine-shaman.desktop DESTINATION ${PLASMA_INCLUDE_DIR}/../../share/kde4/services/)
+install(TARGETS plasma_engine_shaman DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES plasma-engine-shaman.desktop DESTINATION ${SERVICES_INSTALL_DIR})
