--- a/trunk/plasma/applet/CMakeLists.txt
+++ b/trunk/plasma/applet/CMakeLists.txt
@@ -9,5 +9,5 @@ set(plasma_applet_shaman_SRCS
 kde4_add_plugin(plasma_applet_shaman ${plasma_applet_shaman_SRCS})
 target_link_libraries(plasma_applet_shaman ${PLASMA_LIBS} ${KDE4_KDEUI_LIBS})
 
-install(TARGETS plasma_applet_shaman DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/kde4/)
-install(FILES shaman-applet-default.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kde4/services/)
+install(TARGETS plasma_applet_shaman DESTINATION ${KDE4_LIB_DIR}/kde4/)
+install(FILES shaman-applet-default.desktop DESTINATION ${KDE4_LIB_DIR}/../share/kde4/services/)
