Ok, kind of a commit. Here goes:  * Implemented error Handling (at last!)  * Fixed some bugs  * Fixed compiler warnings  * Added more strings (due to the errors)  * More stuff that I simply don't remember now ^^
Enjoy!

--- a/trunk/shaman/etc/shaman.conf
+++ b/trunk/shaman/etc/shaman.conf
@@ -3,16 +3,13 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
 
-  <!-- Only root can own Shaman service -->
-  <policy user="root">
-    <allow own="org.archlinux.shaman"/>
-  </policy>
-
   <!-- Allow anyone to invoke methods on the interface -->
   <policy context="default">
+    <allow own="org.archlinux.shaman"/>
+  
     <allow send_interface="org.archlinux.shaman"/>
-    <allow receive_interface="org.archlinux.shaman"
-           receive_sender="org.archlinux.shaman"/>
+    <allow receive_sender="org.archlinux.shaman"/>
+    <allow receive_interface="org.archlinux.shaman"/>
 
   </policy>
 
