--- a/trunk/shaman/etc/shaman.desktop
+++ b/trunk/shaman/etc/shaman.desktop
@@ -1,9 +1,13 @@
 [Desktop Entry]
 Name=Shaman
+
 GenericName=Package Manager
+GenericName[it]=Gestore di Pacchetti
+
 Exec=kdesu shaman
 Icon=shaman-32
 Type=Application
 Terminal=false
 Comment=A Package Manager for ArchLinux
-Categories=Qt;System
+Comment[it]=Un gestore di Pacchetti per ArchLinux
+Categories=Qt;System;
