Let's bring plasma-dataengine and plasmoid back to live,  we will have that in 1.0 release :)

--- a/trunk/shaman/plasma/CMakeLists.txt
+++ b/trunk/shaman/plasma/CMakeLists.txt
@@ -1,4 +1,4 @@
 INSTALL(CODE "MESSAGE(\"Installing Shaman Plasma Components...\")")
-#add_subdirectory(engine)
-#add_subdirectory(applet) 
+add_subdirectory(engine)
+add_subdirectory(applet) 
 add_subdirectory(runner)
