--- a/trunk/shaman/plasma/applet/CMakeLists.txt
+++ b/trunk/shaman/plasma/applet/CMakeLists.txt
@@ -8,8 +8,15 @@ set(plasma_applet_shaman_SRCS
   ErrorView.cpp
 )
 
-kde4_add_plugin(plasma_applet_shaman ${plasma_applet_shaman_SRCS})
-target_link_libraries(plasma_applet_shaman ${PLASMA_LIBS} ${KDE4_KDEUI_LIBS})
+kde4_add_plugin(plasma_applet_shaman 
+	${plasma_applet_shaman_SRCS}
+)
+
+target_link_libraries(plasma_applet_shaman 
+	${PLASMA_LIBS} 
+	${KDE4_KDEUI_LIBS}
+	${KDE4_KIO_LIBS}
+)
 
 install(TARGETS plasma_applet_shaman DESTINATION ${KDE4_LIB_DIR}/kde4/)
 install(FILES shaman-applet-default.desktop DESTINATION ${KDE4_LIB_DIR}/../share/kde4/services/)
