Fat update. Now the plasmoid has autocompletion (!!), I removed introspection from DBus since I needed some custom code. I've also tried to solve a bit of Utf8 Messages where possible. The runner works again! It was a problem in the .desktop file. Ok, enough for RC1 ^^

--- a/trunk/shaman/CMakeLists.txt
+++ b/trunk/shaman/CMakeLists.txt
@@ -7,9 +7,11 @@ include(FindQt4)
 
 configure_file(config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 
-set(shaman_adaptor_SRCS)
+set(shaman_adaptor_SRCS
+    dbus/shamanadaptor.cpp
+)
 
-qt4_add_dbus_adaptor(shaman_adaptor_SRCS dbus/org.archlinux.shaman.xml src/MainWindow.h MainWindow)
+#qt4_add_dbus_adaptor(shaman_adaptor_SRCS dbus/org.archlinux.shaman.xml src/MainWindow.h MainWindow)
 
 MACRO (MACRO_OPTIONAL_FIND_PACKAGE _name )
    OPTION(WITH_${_name} "Search for ${_name} package" ON)
