New Build System

--- a/trunk/shaman/plasma/applet/CMakeLists.txt
+++ b/trunk/shaman/plasma/applet/CMakeLists.txt
@@ -1,6 +1,7 @@
-FIND_PACKAGE(KDE4 REQUIRED)
-FIND_PACKAGE(Plasma REQUIRED)
-INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} )
+
+INCLUDE_DIRECTORIES(
+    ${CMAKE_CURRENT_BINARY_DIR}
+)
 
 set(plasma_applet_shaman_SRCS
   shamanApplet.cpp
