--- a/trunk/shaman/plasma/engine/CMakeLists.txt
+++ b/trunk/shaman/plasma/engine/CMakeLists.txt
@@ -1,8 +1,6 @@
-FIND_PACKAGE(KDE4 REQUIRED)
-FIND_PACKAGE(Plasma REQUIRED)
+
 INCLUDE_DIRECTORIES(
-    ${KDE4_INCLUDES}
-    ${PLASMA_INCLUDE_DIR}
+    ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 set(shaman_engine_SRCS
