--- a/trunk/shaman/plasma/runner/CMakeLists.txt
+++ b/trunk/shaman/plasma/runner/CMakeLists.txt
@@ -1,6 +1,6 @@
-FIND_PACKAGE(KDE4 REQUIRED)
-FIND_PACKAGE(Plasma REQUIRED)
-INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} )
+INCLUDE_DIRECTORIES(
+    ${CMAKE_CURRENT_BINARY_DIR}
+)
 
 set(krunner_shaman_SRCS
     shamanRunner.cpp
