--- a/trunk/shaman/plasma/engine/CMakeLists.txt
+++ b/trunk/shaman/plasma/engine/CMakeLists.txt
@@ -10,5 +10,5 @@ set(shaman_engine_SRCS
 kde4_add_plugin(plasma_engine_shaman ${shaman_engine_SRCS})
 target_link_libraries(plasma_engine_shaman ${KDE4_KDECORE_LIBS} ${PLASMA_LIBS})
 
-install(TARGETS plasma_engine_shaman DESTINATION ${KDE4_LIB_DIR}/kde4)
-install(FILES plasma-engine-shaman.desktop DESTINATION ${KDE4_LIB_DIR}/../share/kde4/services/)
+install(TARGETS plasma_engine_shaman DESTINATION ${PLUGIN_INSTALL_DIR})
+install(FILES plasma-engine-shaman.desktop DESTINATION ${SERVICES_INSTALL_DIR})
