Breaking linking: starting to integrate aqpm
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/trunk/shaman/src/CMakeLists.txt
+++ b/trunk/shaman/src/CMakeLists.txt
@@ -4,11 +4,11 @@ qt4_add_dbus_adaptor(shaman_adaptor_SRCS ../dbus/org.archlinux.shaman.xml MainWi
 SET(shaman_SRCS ${shaman_adaptor_SRCS}
     main.cpp
     MainWindow.cpp
-    AlpmHandler.cpp
+#    AlpmHandler.cpp
     BuildingDialog.cpp
-    callbacks.cpp
+#    callbacks.cpp
     configDialog.cpp
-    ConfigurationParser.cpp
+#    ConfigurationParser.cpp
     EditPBuild.cpp
     QueueDialog.cpp
     SysUpgradeDialog.cpp
@@ -32,9 +32,9 @@ SET(shaman_SRCS ${shaman_adaptor_SRCS}
 
 SET(shaman_MOC_HDRS
     MainWindow.h
-    AlpmHandler.h
+#    AlpmHandler.h
     BuildingDialog.h
-    callbacks.h
+#    callbacks.h
     configDialog.h
     EditPBuild.h
     QueueDialog.h
@@ -97,6 +97,7 @@ TARGET_LINK_LIBRARIES(shaman
     ${ALPM_LIBS}
     ${LIBARCHIVE_LIBS}
     -lpam
+    -laqpm
 )
 
 INSTALL(CODE "MESSAGE(\"Installing Shaman executable...\")")
