Clearing up hacks & shit
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/trunk/shaman/src/CMakeLists.txt
+++ b/trunk/shaman/src/CMakeLists.txt
@@ -95,7 +95,7 @@ TARGET_LINK_LIBRARIES(shaman
     ${QT_QTNETWORK_LIBRARY}
     ${ALPM_LIBS}
     ${LIBARCHIVE_LIBS}
-    -lpam
+    ${POLKITQT_LIBRARIES}
     -laqpm
 )
 
